# vulkan-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VulkanProject.sln
VulkanProject/: CommandManager.cpp  CommandManager.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Model.cpp  Model.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  UnidormBufferObject.hpp  UniformManager.cpp  UniformManager.hpp  Vertex.hpp  VulkanApplication.hpp  VulkanProject.vcxproj  VulkanProject.vcxproj.filters  imageUtils.cpp  imageUtils.hpp  main.cpp  utils.cpp  utils.hpp  window.cpp  window.hpp
VulkanProject/assets/shaders/: compileShaders.bat  secondPass.frag  shader.frag  shader.vert
VulkanProject/src/: AppTime.cpp  AppTime.hpp  Camera.cpp  Camera.hpp  FirstPassPipeline.cpp  FirstPassPipeline.hpp  FramebufferResources.cpp  FramebufferResources.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Light.cpp  Light.hpp  LightUboManager.cpp  LightUboManager.hpp  Model.cpp  Model.hpp  ModelUboManager.cpp  ModelUboManager.hpp  Pipeline.cpp  Pipeline.hpp  SecondPassPipeline.cpp  SecondPassPipeline.hpp  StandardPipeline.cpp  StandardPipeline.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Transform.cpp  Transform.hpp  UniformManager.cpp  UniformManager.hpp  Vertex.hpp  VulkanApplication.hpp  Window.cpp  Window.hpp  imageUtils.cpp  imageUtils.hpp  pipelineUtils.cpp  pipelineUtils.hpp
VulkanProject/src/asset/: bytecodeFileReader.cpp  bytecodeFileReader.hpp  imageLoader.cpp  imageLoader.hpp  modelLoader.cpp  modelLoader.hpp  pipelineUtils.cpp  pipelineUtils.hpp
VulkanProject/src/context/: CommandManager.cpp  CommandManager.hpp  Device.cpp  VulkanApplication.hpp  Window.cpp
VulkanProject/src/render/image/: imageUtils.cpp  imageUtils.hpp
VulkanProject/src/render/pipeline/: FirstPassPipeline.cpp  FirstPassPipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  SecondPassPipeline.cpp  SecondPassPipeline.hpp  StandardPipeline.cpp  StandardPipeline.hpp
VulkanProject/src/render/uniform/: LightUboManager.cpp  LightUboManager.hpp  Material.cpp  Material.hpp  ModelUboManager.cpp  ModelUboManager.hpp  TextureManager.cpp  TextureManager.hpp
VulkanProject/src/scene/: Camera.cpp  Camera.hpp  Entity.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  Module.hpp  Scene.hpp  Transform.cpp  Transform.hpp
VulkanProject/src/system/: eventManagement.cpp  eventManagement.hpp
VulkanProject/src/time/: AppTime.cpp  AppTime.hpp
tests/: main.cpp
